se configura spring data con schema.sql y data.sql de pruebas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,28 @@
+
+
 server.port=8086
+
+
+#################################################################################
+#
+# Spring Batch Configuration
+#
+#################################################################################
+
+# The batch job will not automatically execute with the start of Spring Boot. 
+spring.batch.job.enabled: false
+
+#spring.devtools.restart.exclude=csv/**
+
+#################################################################################
+#
+# Spring Data Configuration
+#
+#################################################################################
+
+
+spring.jpa.hibernate.ddl-auto=update
+
+# Initialization
+spring.datasource.schema=classpath:data/h2/schema.sql
+spring.datasource.data=classpath:data/h2/data.sql
